@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel">
+ <configlet title="PloneFormGen" action_id="PloneFormGen" appId="PloneFormGen"
+    remove="true" />
+</object>
