@@ -4,7 +4,8 @@ Change History
 1.8.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add uninstall profile and setuphandler. Make Plone 5.1 happy.
+  [smcmahon]
 
 
 1.8.5 (2017-12-20)
